--- a/xinihostel/src/main/res/layout/card_view.xml
+++ b/xinihostel/src/main/res/layout/card_view.xml
@@ -107,6 +107,7 @@
             >
 
             <com.like.LikeButton
+                android:id="@+id/studentLike"
                 app:icon_type="heart"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
