--- a/xinihostel/src/main/res/layout/activity_chat_all.xml
+++ b/xinihostel/src/main/res/layout/activity_chat_all.xml
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView11"
+        android:id="@+id/activityChatAll_textViewMessage"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="10dp"
@@ -32,6 +32,7 @@
         app:layout_constraintWidth_percent="0.5"/>
 
     <ImageView
+        android:id="@+id/activityChatAll_searchIcon"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintWidth_default="percent"
@@ -44,6 +45,22 @@
         app:layout_constraintEnd_toEndOf="@+id/toolbar2"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <SearchView
+        android:id="@+id/activityChatAll_searchView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="16dp"
+        android:src="@drawable/search"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="@id/toolbar2"
+        app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
+        app:layout_constraintEnd_toEndOf="@+id/toolbar2"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent="0.06"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent="1.0" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/activityChatAll_recyclerView"
         android:layout_width="match_parent"
@@ -55,5 +72,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar2"
         app:layout_constraintVertical_bias="0.0" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
